fix images that not showing

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -217,7 +217,7 @@ img {
 }
 
 #home-section {
-  background-image: url("banner-1.jpg");
+  background-image: url(banner-1.jpg);
   background-size: cover;
   background-position: center;
   padding: 12rem 0rem;
@@ -286,15 +286,15 @@ img {
 }
 
 .services-cards .card .card-1-bg {
-  background-image: url("consulting.svg");
+  background-image: url(consulting.svg);
 }
 
 .services-cards .card .card-2-bg {
-  background-image: url("finance.svg");
+  background-image: url(finance.svg);
 }
 
 .services-cards .card .card-3-bg {
-  background-image: url("technology.svg");
+  background-image: url(technology.svg);
 }
 
 .services-cards .card h4 {
